# anchor-groth-solana-demo

./: Anchor.toml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/args/: inputs.rs  mod.rs  proof.rs  verifying_key.rs
programs/anchor-groth-solana-demo/: Cargo.toml
programs/anchor-groth-solana-demo/examples/: cli.rs
programs/anchor-groth-solana-demo/proof/: block_verifier.sol  block_vk.json  input.json  proof.hex
programs/anchor-groth-solana-demo/src/: lib.rs
tests/: anchor-groth-solana-demo.ts
