[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-groth-solana-demo = { workspace = true }
num-bigint = "0.4.6"
solana-rpc-client = "2.0.10"
solana-sdk = "2.0.10"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
groth16-solana = "0.0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uint = "0.10.0"
anchor-lang = "0.30.1"
dotenv = "0.15.0"
