[package]
name = "anchor-groth-solana-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_groth_solana_demo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# ark-bn254 = "0.4.0"
# ark-serialize = "0.4.2"
groth16-solana = "0.0.3"

[dev-dependencies]
num-bigint = "0.4.6"
solana-rpc-client = "2.0.10"
solana-sdk = "2.0.10"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
groth16-solana = "0.0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uint = "0.10.0"
